# CoreCast

./: .gitignore  Earthfile  README.md  corecast_output.ppm  docker-compose.yml
.antigravity/: README.md
.antigravity/instructions/: confirmation_on_removal.md  context_management.md  contextual_guidance.md  teaching_mindset.md  workflow_coresac.md
.cursor/rules/: ask-before-removing-functionality.mdc  avoid-whole-thirdparty-context.mdc  coresac-raycast-aabb-workflow.mdc  explain-why-in-guidance.mdc  teach-like-a-professor.mdc
.devcontainer/: devcontainer.json
archive/: corecast_depth_map.cpp  corecast_optix_accel.hpp  corecast_optix_launch.hpp  corecast_optix_module.cpp  corecast_optix_pipeline.cpp  corecast_optix_pipeline.hpp  corecast_optix_sbt.hpp  program_structs.hpp
corecast_optix/: CMakeLists.txt
corecast_optix/cmake/: corecast_optixConfig.cmake.in
corecast_optix/cuda/pointcloud/: coresac.cu  coresac_aabb.cu  coresac_scoring.cu  coresca_group.cu  extract_2d_plane.cu  hit_miss_pointcloud.cu  pointcloud_ray_utils.cuh  pointcloud_to_depth_map.cu  raygen_point_cloud.cu
corecast_optix/cuda_examples/: draw_solid_color.cu
corecast_optix/examples/: coresac_example.cpp  coresac_progress_example.cpp  hello_workflow_example.cpp  hello_world.cpp  hello_world_point_cloud.cpp  hello_world_point_cloud_helpers.cpp  hello_world_point_cloud_helpers.hpp
corecast_optix/include/corecast_optix/: corecast_optix.hpp  corecast_optix_accel.hpp  corecast_optix_context.hpp  corecast_optix_cuda_buffer.hpp  corecast_optix_cuda_types.hpp  corecast_optix_launch.hpp  corecast_optix_module.hpp  corecast_optix_pipeline.hpp  corecast_optix_program_registry.hpp  corecast_optix_sbt.hpp  corecast_optix_types.hpp  corecast_optix_utils.hpp  corecast_workflow.hpp
corecast_optix/include/corecast_optix_v2/: corecast_optix.hpp  corecast_optix_types.hpp  corecast_workflow.hpp
corecast_optix/include/corecast_processing/: corecast_coresac.hpp  corecast_depth_map.hpp
corecast_optix/include/corecast_processing_V2/: corecast_corecast.hpp
corecast_optix/include/modules/: coresac_workflow.cppm  hello_workflow.cppm  workflow.cppm
corecast_optix/src/: corecast_coresac.cpp  corecast_depth_map.cpp  corecast_optix.cpp  corecast_optix_context.cpp  corecast_optix_launch.cpp  corecast_optix_module.cpp  corecast_optix_pipeline.cpp  corecast_optix_program_registry.cpp  corecast_optix_utils.cpp  corecast_workflow.cpp
corecast_ros2/: CMakeLists.txt  package.xml
corecast_ros2/config/: params.yaml
corecast_ros2/include/corecast_ros2/: corecast_ros2_depth_map.hpp  corecast_ros2_node.hpp
corecast_ros2/launch/: corecast_ros2.launch.py  corecast_ros2_with_sim.launch.py
corecast_ros2/src/: corecast_ros2_node.cpp  corecast_ros2_pointcloud_sim_node.cpp
ros2_ws/src/corecast_optix/: CMakeLists.txt  package.xml
ros2_ws/src/corecast_optix/include/corecast_optix/: corecast_optix_context.hpp  corecast_optix_launch.hpp  corecast_optix_module.hpp  corecast_optix_pipeline.hpp  corecast_optix_program_registry.hpp  corecast_optix_sbt.hpp
ros2_ws/src/corecast_optix/src/: corecast_optix_context.cpp  corecast_optix_module.cpp  corecast_optix_pipeline.cpp  corecast_optix_program_registry.cpp
