<?xml version="1.0"?>
<package format="3">
  <name>corecast_ros2</name>
  <version>0.0.1</version>
  <description>ROS 2 package wrapper for CoreCast.</description>
  <maintainer email="carlosfernandez1989@gmail.com">Carlos Fernandez-Martinez</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
