<?xml version="1.0"?>
<package format="3">
  <name>corecast_optix</name>
  <version>0.1.0</version>
  <description>Skeleton package for copy-free point cloud processing with ROS 2 + OptiX.</description>
  <maintainer email="maintainer@example.com">CoreCast Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
